--- a/cv-vitae/cv-vitae.Rmd
+++ b/cv-vitae/cv-vitae.Rmd
@@ -8,7 +8,7 @@ email: "schneeman@gmail.com"
 twitter: schnee
 github: schnee
 linkedin: schneeman
-headcolor: 686868
+headcolor: 000000
 date: "`r format(Sys.time(), '%B %Y')`"
 output: 
   vitae::awesomecv
@@ -21,7 +21,9 @@ library(vitae)
 
 # Overview
 
-I focus mainly on building a data science and algorithmic muscle, but also get to work on building durable teams . I think visually and don't feel comfortable with a data set unless I can craft an aesthetically pleasing image out of it. I am quite comfortable telling stories in front of crowds of any size and seeks avenues to expand the role of science and math in all directions. I pivoted from software engineering roles to data science to help companies unlock the value of their data as they pivoted to modern transaction-based business models.
+Data science executive building and deploying machine learning and algorithmic models in real time customer facing applications. 
+
+Broad leadership experience across data scientists, software engineers, data analysts, and data engineers, having built durable teams across disciplines and companies. Pivoted from software engineering roles to data science to help companies unlock the value of their data as they pivot to modern transaction-based business models.
  
 # Experience
 
@@ -31,7 +33,7 @@ my_experience <- tibble::tribble(
   
   # The DOSH Experience
   
-  "Senior Director, Data Science", "Jan 2018", "", "DOSH, LLC", "Built a 9-person diverse team of Data Scientists, Data Analysts, and Data Engineers, all focused on evolving Dosh to a more data-oriented company. The Data and Analytics team was responsible for Data Science, Business Intelligence and Data Engineering (e.g. the data warehouse and data lake)",
+  "Senior Director, Data Science", "Jan 2018", "", "DOSH, LLC", "Built a 9-person diverse team of Data Scientists, Data Analysts, and Data Engineers, all focused on evolving Dosh to a more data-oriented company. The Data and Analytics team was responsible for Data Science, Business Intelligence and Data Engineering (e.g. building the data warehouse and data lake)",
   "Senior Director, Data Science", "Jan 2018", "", "DOSH, LLC", "Collaborated with key business stakeholders to generate marketing campaigns, financial models, sales models, and investor-deck content",
   "Senior Director, Data Science", "Jan 2018", "", "DOSH, LLC", "Collaborated with technical stakeholders to create a data warehouse from application data and to create data pipelines feeding location data to S3 buckets for graph analysis. Eliminated redundant RDBMS systems in-favor of AWS Redshift",
   "Senior Director, Data Science", "Jan 2018", "", "DOSH, LLC", "Built xgboost-based models predicting offer redemption (directly tied to revenue) and deeply analyzed fraudulent behaviors and referral networks",
